test/translator/success/import_test/folder/subfolder/file.prez
int func() {
  return 7;
}

