test/translator/error/import_test/other_file.prez
int otherFunc() {
  return 3;
}
